# dj-soa-backend

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
account/: admin.py  forms.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/models/: User.py
home/: views.py
soa/: asgi.py  settings.py  urls.py  wsgi.py
templates/account/: login.html
templates/base/: base.html
templates/dashboard/: index.html
templates/home/: index.html.j2
