[tool.poetry]
name = "dj-soa-backend"
version = "0.1.0"
description = ""
authors = ["msterhuj <gabin.lanore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
drf-yasg = {extras = ["validation"], version = "^1.21.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
